# nRF52832_dev

./: LICENSE  README.md
Extra/: filereader.py
Extra/GPIO test program/: main.c
Extra/Python/: data_file.txt  file2.txt  filereader.py  plotterv2.py
First_try_or_not/: CMakeLists.txt  prj.conf
First_try_or_not/src/: main.c
Other/Doxygen/Python/: ik5m.txt  (+1 more)
Other/Python/: file1.txt  filereader.py
applications/First_try_or_not/: CMakeLists.txt
applications/First_try_or_not/src/custom_files/: button_leds.c  button_leds.h  kalman_filter.c  kalman_filter.h  observer.c
applications/hello_world1/: CMakeLists.txt  prj.conf
applications/observer_test_1/: CMakeLists.txt
blink_example/src/: gui.c  gui.h  main.c  photores.c  photores.h
code/: CMakeLists.txt  prj.conf
code/src/: Doxyfile  buttons.h  initiater.h  kalman_filter.h  main.c  misc.h  observer.h  search.h  servo.h
code/src/Data_processing/: data_processor.c  data_processor.h
code/src/Encoder_experimental/Encoder_QDEC_improvement/: encoder.c  nrfx_config_nrf52840.h  prj.conf
code/src/Encoder_experimental/Encoder_interrupt/: encoder.c  encoder.h
code/src/Encoder_experimental/Encoder_qdec/: encoder_qdec.c
code/src/Handlers/: buttons.c  buttons.h  initiater.c  initiater.h  kalman_filter.c  kalman_filter.h  observer.c  observer.h
code/src/Misc/: laser.c  misc.c  misc.h
code/src/Search algorithms/: search.c
code/src/Search_algorithms/: search.c  search.h
code/src/Servo/: encoder.c  encoder.h  servo.c  servo.h
servo_control_main/: CMakeLists.txt  prj.conf
servo_control_main/src/: main.c
(+90 files in other folders)
